--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 								  </div>
 								  <div class="links">
 									 <ul style="margin:0px;">
-										<li><a href="#">HOME</a></li>
-										<li><a href="#services">SERVICES</a></li>
-										<li><a href="#specials">SPECIALS</a></li>
-										<li><a id="bookNow" href="#bookOnline">BOOK ONLINE</a></li>
-										<li><a href="#contact">CONTACT</a></li>
+										<li><a href="#" style="text-decoration:none">HOME</a></li>
+										<li><a href="#services" style="text-decoration:none">SERVICES</a></li>
+										<li><a href="#specials" style="text-decoration:none">SPECIALS</a></li>
+										<li><a id="bookNow" href="#bookOnline" style="text-decoration:none">BOOK ONLINE</a></li>
+										<li><a href="#contact" style="text-decoration:none">CONTACT</a></li>
 									 </ul>
 								  </div>
 								  <div class="clearfix"></div>
