--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									 <span></span>
 								  </div>
 								  <div class="links">
-									 <ul style="margin:0px;">
+									 <ul style="margin:0px;padding-top:3%;">
 										<li><a href="#" style="text-decoration:none">HOME</a></li>
 										<li><a href="#services" style="text-decoration:none">SERVICES</a></li>
 										<li><a href="#specials" style="text-decoration:none">SPECIALS</a></li>
